--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "braces": "^3.0.3",
-    "core-js": "^3.37.1",
     "css-loader": "^7.1.1",
     "execa": "^9.1.0",
     "js-cookie": "^3.0.5",
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.8",
     "react-app-rewired": "^2.2.1",
     "webpack": "^5.91.0"
